# lean-client-proto

./: .gitignore  .gitmodules  CLAUDE.md  LeanConsensus.lean  Main.lean  lake-manifest.json  lakefile.lean
.github/workflows/: ci.yml
LeanConsensus/: Actor.lean  Config.lean  Genesis.lean  Metrics.lean  SSZ.lean  Signal.lean  Storage.lean
LeanConsensus/Actor/: BlockchainActor.lean  Messages.lean  P2PActor.lean  System.lean  ValidatorActor.lean
LeanConsensus/Consensus/: Aggregator.lean  Constants.lean  ForkChoice.lean  Signing.lean  StateTransition.lean  Types.lean
LeanConsensus/Crypto/: KeyState.lean  LeanMultisig.lean  LeanSig.lean  Sha256.lean
LeanConsensus/Network/: BeaconAPI.lean  HttpClient.lean  P2P.lean  RPC.lean  Sidecar.lean
LeanConsensus/SSZ/: Bitlist.lean  Bitvector.lean  BytesN.lean  Decode.lean  Derive.lean  Encode.lean  Error.lean  List.lean  Merkleization.lean  Types.lean  Vector.lean
docs/: integration.md
ffi/: build.sh  lean_multisig.c  lean_multisig.h  lean_p2p.c  lean_p2p.h  lean_sha256.c  lean_sig.c  lean_sig.h  lean_signal.c  libc_compat.c
ffi/lean_multisig_ffi/: Cargo.toml  build.sh
ffi/lean_multisig_ffi/src/: lib.rs
ffi/lean_sig_ffi/: Cargo.toml  build.sh
ffi/lean_sig_ffi/src/: lib.rs
proofs/Consensus/: Safety.lean
proofs/SSZ/: Roundtrip.lean
scripts/: check-sorry.sh  gen-leanspec-fixtures.sh  run-devnet.sh
test/: TestMain.lean
test/Test/: Actor.lean  Config.lean  Genesis.lean  Metrics.lean  Storage.lean
test/Test/Actor/: WireActors.lean
test/Test/Consensus/: Aggregator.lean  ForkChoice.lean  Signing.lean  (+2 more)
(+18 files in other folders)
