[package]
name = "lean-multisig-ffi"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"

[lib]
crate-type = ["staticlib"]

[dependencies]
lean-multisig = { path = "../vendor/leanMultisig" }
backend = { path = "../vendor/leanMultisig/crates/backend" }
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.9"
